Added Styling for login form

--- a/src/components/UI/Form/Form.css
+++ b/src/components/UI/Form/Form.css
@@ -3,3 +3,11 @@
     border:1px solid #000;
     background-color:#dfe0dc;
 }
+
+.form-title{
+    padding:10px;
+    background-color:#333;
+    color:#dfe0dc;
+    padding:-20px;
+
+}
