--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -1,4 +1,4 @@
-ul {
+.ul {
     list-style-type: none;
     margin: 0;
     margin-bottom: 50px;
@@ -7,11 +7,17 @@ ul {
     background-color: #333;
 }
 
-li {
+.title{
+    letter-spacing: 2px;
+}
+
+
+
+.li {
     float: left;
 }
 
-li a {
+.li a {
     display: block;
     color: white;
     text-align: center;
@@ -19,6 +25,12 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+
+
+.li a:hover {
     background-color: #111;
+}
+
+.right{
+    float: right; 
 }
