Updated search box

--- a/src/components/NavigationBar/NavigationBar.css
+++ b/src/components/NavigationBar/NavigationBar.css
@@ -4,8 +4,8 @@
     margin-bottom: 50px;
     padding: 0;
     overflow: hidden;
-    background-color: #12355B;
-    border-bottom: 2px solid #FFC65A;
+    background-color: #272D2D;
+    border-bottom: 2px solid #5B6C00;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
