--- a/src/components/UI/Form/Form.css
+++ b/src/components/UI/Form/Form.css
@@ -1,12 +1,10 @@
 .form{
-    padding:20px;
-    border:1px solid #272D2D;
 }
 
 .form-title{
-    padding:10px;
-    background-color:#272D2D;
-    color:#dfe0dc;
-    padding:-20px;
+    padding:5px;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-align: center
 
 }
