--- a/src/components/LoginForm/LoginForm.css
+++ b/src/components/LoginForm/LoginForm.css
@@ -2,3 +2,15 @@
     max-width: 400px;
     margin: auto;
 }
+
+.formLegend{
+    text-align: center;
+    font-size: 1.5rem;
+    background:#fff;
+    font-family: 'Play', sans-serif;
+}
+
+.formFieldSet{
+	border:1px solid #999;
+	border-radius:8px;
+}
