--- a/src/components/MovieSearchBox/MovieSearchBox.css
+++ b/src/components/MovieSearchBox/MovieSearchBox.css
@@ -2,3 +2,14 @@
     max-width: 500px;
     margin: auto;
 }
+.formLegend{
+    text-align: center;
+    font-size: 1.5rem;
+    background:#fff;
+    font-family: 'Play', sans-serif;
+}
+
+.formFieldSet{
+	border:none;
+	
+}
