--- a/src/components/MovieSearchResult/MovieSearchResult.css
+++ b/src/components/MovieSearchResult/MovieSearchResult.css
@@ -1,29 +1,13 @@
-.movieCard{
-    display: inline-block;
-    width: 200px;
-    border:1px solid #000;
+.movie-card{
     margin: 20px;
     -webkit-box-shadow: 3px 3px 5px 6px #ccc;  /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
     -moz-box-shadow:    3px 3px 5px 6px #ccc;  /* Firefox 3.5 - 3.6 */
     box-shadow:         3px 3px 5px 6px #ccc;  /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
 }
 
-.movieCardTitle{
-    font-weight: bold
-}
-
-.movieCardField{
-    width: 200px;
-    white-space:nowrap;
-    background-color: #CCC;
-    overflow: hidden;
-    text-overflow: ellipsis;
-
-}
-.movieCardPoster{
-    width:200px;
+.movie-card-poster{
+    width:100%;
     height:300px;
-
     margin-bottom:-5px;
 
 }
